# AREA-303

./: .env.example  .gitignore  MODELING.md  Makefile  README.md  demo.py  docker-compose.yml  requirements-ml.txt  requirements.txt  test_query.py  test_result.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  rate_limit.py  responses.py  security.py  sse.py
backend/app/db/: __init__.py  base.py  redis.py  session.py
backend/app/models/: __init__.py  idea.py
backend/app/schemas/: __init__.py  copilot.py  creator.py  decision.py  flash_sale.py  genai.py  insights.py  journey.py  knowledge.py  market.py  negotiation.py  product_graph.py  responses.py  segmentation.py  supply_chain.py
backend/app/services/: __init__.py  commerce_store.py  content_generator.py  copilot.py  creator.py  decision.py  flash_sale.py  idea_service.py  insights.py  journey.py  knowledge.py  llm_reasoning.py  market.py  negotiation.py  personal_shopper.py  portfolio.py  product_graph.py  recsys.py  segmentation.py  seller_coach.py  supply_chain.py  supply_news.py
backend/app/services/genai/: __init__.py  base.py  cache.py  (+8 more)
backend/tests/: conftest.py  test_cache.py  test_envelope.py  test_genai_endpoints.py  test_segmentation_endpoint.py  test_sse.py
(+253 files in other folders)
